// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSumarry with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
     totalling 
    $250.24
  </h1>
</div>
`;

exports[`should correctly render ExpensesSumarry with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.50
  </h1>
</div>
`;
